# on-chain-chess

./: .gitignore  Cargo.toml  LICENSE  README.md
meta/: Cargo.toml
meta/src/: main.rs
src/: on_chain_chess_sc.rs  on_chain_chess_sc_interactions.rs  on_chain_chess_sc_owner_interactions.rs  on_chain_chess_sc_requirements.rs  on_chain_chess_sc_storage.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
