[package]
name = "on-chain-chess-sc"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/on_chain_chess_sc.rs"

[dependencies.multiversx-sc]
version = "0.51.1"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.51.1"

[workspace]
members = [
    ".",
    "meta",
    "interactor",
]
